--- a/404.html
+++ b/404.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   <meta http-equiv="refresh" content="0;url=/PS_Portfolio/index.html" />
-  <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=/PS_Portfolio/" />
+    <title>Redirecting...</title>
 </head>
 <body>
-    <p>Redirecting to hoe page ... </p>
-
+    <p>Redirecting to home page ...</p>
     <script>
-        window.location.href="/PS_Portfolio/"; 
+        window.location.href = "/PS_Portfolio/";
     </script>
-    
 </body>
 </html>
